# zero-to-production

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.github/workflows/: audit-on-push.yml  general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20221010192703_create_subscriptions_table.sql  20221112182215_add_status_to_subscriptions.sql  20221112182614_make_status_column_not_null_in_subscriptions.sql  20221112184952_create_subscription_tokens_table.sql  20221203220443_create_users_table.sql  20221203222739_rename_password_column.sql  20221206204312_seed_user.sql  20221229144439_create_idempotency_table.sql  20221230162355_relax_null_checks_on_idempotency.sql  20230116170911_create_newsletter_issues_table.sql  20230117003150_add_retry_columns_to_issues_queue.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  telemetry.rs  tera.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: mod.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: mod.rs
src/routes/login/: get.rs  post.rs
templates/: base.html  index.j2  login.html  login.j2
templates/admin/: base.j2  change_password.html  change_password.j2  dashboard.html  dashboard.j2  nav.j2  send-newsletter.html  send-newsletter.j2
tests/: health_check.rs  subscribe.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
