[package]
authors = ["Aldo Funes <aldofunes@proton.me>"]
edition = "2021"
name = "newsletter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "newsletter"
path = "src/main.rs"

[dependencies]
actix-web = "4.2.1"
chrono = { version = "0.4.22", features = ["clock"], default-features = false }
config = { version = "0.13.2", default-features = false, features = ["yaml"] }
env_logger = "0.9.1"
log = "0.4.17"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.145"
sqlx = { version = "0.6.2", features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-actix-web = "0.6.1"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = [
  "registry",
  "env-filter",
] }
uuid = { version = "1.2.1", features = ["v4"] }

[dev-dependencies]
once_cell = "1.15.0"
reqwest = { version = "0.11.12", features = ["json"] }
