[package]
authors = ["Aldo Funes <aldofunes@proton.me>"]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
actix-web = "4.2.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-web-lab = "0.18.8"
anyhow = "1.0.66"
argon2 = { version = "0.4.1", features = ["std"] }
base64 = "0.13.1"
chrono = { version = "0.4.22", features = ["clock"], default-features = false }
config = { version = "0.13.2", default-features = false, features = ["yaml"] }
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std"] }
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.11.12", features = ["cookies", "json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.145"
serde-aux = "4.0.0"
serde_json = "1.0.89"
sha2 = "0.10.6"
sqlx = { version = "0.6.2", features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
] }
tera = "1.17.1"
thiserror = "1.0.37"
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.2"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = [
  "registry",
  "env-filter",
] }
unicode-segmentation = "1.10.0"
urlencoding = "2.1.2"
uuid = { version = "1.2.1", features = ["v4", "serde"] }
validator = "0.16.0"

[dev-dependencies]
claims = "0.7.1"
fake = "2.5.0"
linkify = "0.9.0"
once_cell = "1.15.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.87"
serde_urlencoded = "0.7.1"
wiremock = "0.5.15"
